follow your comments to reach the light

--- a/esg_analysis.ipynb
+++ b/esg_analysis.ipynb
@@ -4973,7 +4973,8 @@
    "metadata": {},
    "source": [
     "## Vamos a decir que portfolio weight se hará solamente minmax porque.... PORQUE QUÉ??es mas facil para ML?\n",
-    "y me toca borrar todavia varias columnas, todas esas de col_log y en el caso de portfolio, tanto col_log como col_log_scaled y además las originales"
+    "y me toca borrar todavia varias columnas, todas esas de col_log y en el caso de portfolio, tanto col_log como col_log_scaled y además las originales\n",
+    "E IMPRIME EL SKEW DE PORTFOLIO ANTES Y DESPUES DE MINMAX"
    ]
   },
   {
