--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -82,12 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "8e5f3b0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= pd.read_excel('EQ_2024_Industry.xlsx')\n"
+    "DATA_PATH = \"../datasets/\"\n",
+    "df= pd.read_excel(DATA_PATH+'EQ_2024_Industry.xlsx')\n"
    ]
   },
   {
@@ -5513,11 +5514,13 @@
     "\n",
     "# Initialize a dictionary to store DataFrames for each year\n",
     "funds = {}\n",
+    "DATA_PATH = \"../datasets/\"\n",
     "\n",
     "# Loop through each year\n",
     "for year in years:\n",
     "    # Read the Excel file for the current year\n",
-    "    df = pd.read_excel(f'EQ_{year}_Industry.xlsx')\n",
+    "    file_path = f\"{DATA_PATH}EQ_{year}_Industry.xlsx\"\n",
+    "    df = pd.read_excel(file_path)\n",
     "    \n",
     "    # Rename columns consistently for easier analysis\n",
     "    df.rename(columns={\n",
@@ -5530,13 +5533,6 @@
     "    \n",
     "    # Store the processed DataFrame in the dictionary with the year as the key\n",
     "    funds[year] = df\n",
-    "\n",
-    "# Access each year's DataFrame from the dictionary\n",
-    "#fund_2018 = funds[2018]\n",
-    "#fund_2019 = funds[2019]\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -7037,16 +7033,6 @@
     "This suggests that for the fund’s largest investments, voting power is generally proportional to ownership, indicating that **most high-weight positions do not face governance constraints related to share structures**.  \n",
     "The few discrepancies that do exist in this top tier may point to strategic arrangements or multi-class share structures in selected companies, but they are relatively rare compared to the overall top holdings.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
-   "id": "9bdb85ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "esg_2024 = pd.read_excel('esg_2024.xlsx')"
    ]
   },
   {
