--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "51b435ee",
    "metadata": {},
    "outputs": [
@@ -124,8 +124,10 @@
     }
    ],
    "source": [
-    "esg_2024 = pd.read_excel('esg_2024.xlsx')\n",
-    "fund_2024 = pd.read_excel('clean_fund_2024.xlsx')\n",
+    "# Set the data path and import datasets\n",
+    "DATA_PATH = \"../datasets/\"\n",
+    "esg_2024 = pd.read_excel(DATA_PATH +'esg_2024.xlsx')\n",
+    "fund_2024 = pd.read_excel(DATA_PATH +'clean_fund_2024.xlsx')\n",
     "print(esg_2024.shape)\n",
     "print(fund_2024.shape) "
    ]
