--- a/notebooks/meetings.ipynb
+++ b/notebooks/meetings.ipynb
@@ -5383,6 +5383,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "333de8fa",
+   "metadata": {},
+   "source": [
+    "# First, run this"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "43eae46c",
@@ -5484,98 +5492,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "4cdd5fe1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Industry</th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Market_Value_USD</th>\n",
-       "      <th>Voting</th>\n",
-       "      <th>Ownership</th>\n",
-       "      <th>Portfolio_Weight</th>\n",
-       "      <th>Environmental</th>\n",
-       "      <th>Social</th>\n",
-       "      <th>Governance</th>\n",
-       "      <th>Climate_change</th>\n",
-       "      <th>ESG_any</th>\n",
-       "      <th>processed</th>\n",
-       "      <th>already_processed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Consumer Discretionary</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>tesla inc</td>\n",
-       "      <td>14211259233</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1.105209</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Industry         Region        Country       Name  \\\n",
-       "8  Consumer Discretionary  North America  United States  tesla inc   \n",
-       "\n",
-       "   Market_Value_USD  Voting  Ownership  Portfolio_Weight  Environmental  \\\n",
-       "8       14211259233     1.1        1.1          1.105209              1   \n",
-       "\n",
-       "   Social  Governance  Climate_change  ESG_any  processed  already_processed  \n",
-       "8       1           1               1        1      False              False  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_p80[df_p80['Name'].str.contains('tesl')]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f82b450a",
    "metadata": {},
    "source": [
-    "# Check the cell above and then continue with the extraction with the cell beneath, it will run for a while"
+    "# Check the cell above and then continue with the extraction with the cells beneath, it will run for a while"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed8950d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Delete temp checkpoints from today's run\n",
+    "temp_files = ['./temp/checkpoint_progress.csv', \n",
+    "              './temp/checkpoint_disagreements.csv', \n",
+    "              './temp/checkpoint_stats.csv']\n",
+    "\n",
+    "for file in temp_files:\n",
+    "    if os.path.exists(file):\n",
+    "        os.remove(file)\n",
+    "        print(f\"✓ Deleted {file}\")\n",
+    "\n",
+    "print(\"\\nReady for fresh run tomorrow\")"
    ]
   },
   {
