Mapping has been done

--- a/notebooks/meetings.ipynb
+++ b/notebooks/meetings.ipynb
@@ -5387,12 +5387,43 @@
    "id": "333de8fa",
    "metadata": {},
    "source": [
-    "# First, run this"
+    "# Manual mapping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "id": "8d21d041",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ API setup complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic imports and API setup\n",
+    "import requests\n",
+    "import time\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load API credentials\n",
+    "load_dotenv()\n",
+    "API_KEY = os.getenv('NBIM_API_KEY')\n",
+    "BASE_URL = os.getenv('NBIM_BASE_URL')\n",
+    "\n",
+    "headers = {'x-api-key': API_KEY}\n",
+    "\n",
+    "print(\"✓ API setup complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "43eae46c",
    "metadata": {},
    "outputs": [
@@ -5405,32 +5436,34 @@
       "\n",
       "amazon.com inc\n",
       "  Testing: 'Amazon.com, Inc.'\n",
-      "  ❌ Status 429\n",
+      "  ✅ FOUND: Ticker=AMZN, Meetings=13\n",
       "\n",
       "meta platforms inc\n",
       "  Testing: 'Meta Platforms, Inc.'\n",
-      "  ❌ Status 429\n",
+      "  ✅ FOUND: Ticker=META, Meetings=13\n",
       "\n",
       "taiwan semiconductor manufacturing co ltd\n",
       "  Testing: 'Taiwan Semiconductor Manufacturing Co., Ltd.'\n",
-      "  ❌ Status 429\n",
+      "  ✅ FOUND: Ticker=2330, Meetings=21\n",
       "\n",
       "tesla inc\n",
       "  Testing: 'Tesla, Inc.'\n",
-      "  ❌ Status 429\n",
+      "  ✅ FOUND: Ticker=TSLA, Meetings=15\n",
       "\n",
       "eli lilly & co\n",
       "  Testing: 'Eli Lilly and Company'\n",
-      "  ❌ Status 429\n",
+      "  ✅ FOUND: Ticker=LLY, Meetings=13\n",
       "\n",
       "jpmorgan chase & co\n",
       "  Testing: 'JPMorgan Chase & Co.'\n",
-      "  ❌ Status 429\n",
+      "  ✅ FOUND: Ticker=JPM, Meetings=13\n",
       "\n",
       "======================================================================\n",
       "RESULTS:\n",
-      "✅ Successful: 0/6\n",
-      "❌ Failed: 6/6\n"
+      "✅ Successful: 6/6\n",
+      "❌ Failed: 0/6\n",
+      "\n",
+      "✓ These names work - you can continue finding the rest!\n"
      ]
     }
    ],
@@ -5489,6 +5522,312 @@
     "\n",
     "if successful:\n",
     "    print(\"\\n✓ These names work - you can continue finding the rest!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "25a978cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing 100 companies...\n",
+      "This will take ~5 minutes due to rate limiting\n",
+      "\n",
+      "  Progress: 20/100\n",
+      "  Progress: 40/100\n",
+      "  Progress: 60/100\n",
+      "  Progress: 80/100\n",
+      "  Progress: 100/100\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 136\u001b[0m\n\u001b[0;32m    133\u001b[0m         failed\u001b[38;5;241m.\u001b[39mappend(our_name)\n\u001b[0;32m    135\u001b[0m \u001b[38;5;66;03m# Load df_p80 to calculate market value\u001b[39;00m\n\u001b[1;32m--> 136\u001b[0m df_p80 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(DATA_PATH \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mp80_companies_sorted_with_status.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    137\u001b[0m successful_df \u001b[38;5;241m=\u001b[39m df_p80[df_p80[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(successful)]\n\u001b[0;32m    138\u001b[0m total_value \u001b[38;5;241m=\u001b[39m successful_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMarket_Value_USD\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39msum()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Complete name mapping for top 100 companies\n",
+    "name_mapping = {\n",
+    "    'amazon.com inc': 'Amazon.com, Inc.',\n",
+    "    'meta platforms inc': 'Meta Platforms, Inc.',\n",
+    "    'taiwan semiconductor manufacturing co ltd': 'Taiwan Semiconductor Manufacturing Co., Ltd.',\n",
+    "    'tesla inc': 'Tesla, Inc.',\n",
+    "    'eli lilly & co': 'Eli Lilly and Company',\n",
+    "    'jpmorgan chase & co': 'JPMorgan Chase & Co.',\n",
+    "    'novo nordisk a/s': 'Novo Nordisk A/S',\n",
+    "    'tencent holdings ltd': 'Tencent Holdings Limited',\n",
+    "    'procter & gamble co/the': 'Procter & Gamble Health Limited',\n",
+    "    'home depot inc/the': 'The Home Depot, Inc.',\n",
+    "    'netflix inc': 'Netflix, Inc.',\n",
+    "    'alibaba group holding ltd': 'Alibaba Group Holding Limited',\n",
+    "    'johnson & johnson': 'Johnson & Johnson',\n",
+    "    'samsung electronics co ltd': 'Samsung Electronics Co., Ltd.',\n",
+    "    'digital realty trust inc': 'Digital Realty Trust, Inc.',\n",
+    "    'salesforce inc': 'Salesforce, Inc.',\n",
+    "    'nextera energy inc': 'NextEra Energy, Inc.',\n",
+    "    'merck & co inc': 'Merck & Co., Inc.',\n",
+    "    'coca-cola co/the': 'The Coca-Cola Company',\n",
+    "    'wells fargo & co': 'Wells Fargo & Company',\n",
+    "    'cisco systems inc': 'Cisco Systems, Inc.',\n",
+    "    'advanced micro devices inc': 'Advanced Micro Devices, Inc.',\n",
+    "    'pepsico inc': 'PepsiCo, Inc.',\n",
+    "    'servicenow inc': 'ServiceNow, Inc.',\n",
+    "    'intuitive surgical inc': 'Intuitive Surgical, Inc.',\n",
+    "    'walt disney co/the': 'The Walt Disney Company',\n",
+    "    'blackrock inc': 'BlackRock, Inc.',\n",
+    "    'sanofi sa': 'Sanofi',\n",
+    "    'caterpillar inc': 'Caterpillar, Inc.',\n",
+    "    'mitsubishi ufj financial group inc': 'Mitsubishi UFJ Financial Group, Inc.',\n",
+    "    'simon property group inc': 'Simon Property Group, Inc.',\n",
+    "    'bhp group ltd': 'BHP Group (UK) Ltd.',\n",
+    "    'progressive corp/the': 'The Progressive Corporation',\n",
+    "    'at&t inc': 'AT&T Inc.',\n",
+    "    'dsv a/s': 'DSV A/S',\n",
+    "    \"lowe's cos inc\": 'Lowes Companies, Inc.',\n",
+    "    't-mobile us inc': 'T-Mobile US, Inc.',\n",
+    "    'analog devices inc': 'Analog Devices, Inc.',\n",
+    "    'cie financiere richemont sa': 'Compagnie Financiere Richemont SA',\n",
+    "    'gilead sciences inc': 'Gilead Sciences, Inc.',\n",
+    "    'sk hynix inc': 'SK hynix, Inc.',\n",
+    "    'recruit holdings co ltd': 'Recruit Holdings Co., Ltd.',\n",
+    "    'palantir technologies inc': 'Palantir Technologies, Inc.',\n",
+    "    'tjx cos inc/the': 'The TJX Companies, Inc.',\n",
+    "    'alexandria real estate equities inc': 'Alexandria Real Estate Equities, Inc.',\n",
+    "    'sumitomo mitsui financial group inc': 'Sumitomo Mitsui Trust Group, Inc.',\n",
+    "    'goldman sachs group inc/the': 'The Goldman Sachs Group, Inc.',\n",
+    "    'applied materials inc': 'Applied Materials, Inc.',\n",
+    "    'avalonbay communities inc': 'AvalonBay Communities, Inc.',\n",
+    "    'uber technologies inc': 'Uber Technologies, Inc.',\n",
+    "    'aia group ltd': 'AIA Group Limited',\n",
+    "    'eaton corp plc': 'Eaton Corporation plc',\n",
+    "    'tokio marine holdings inc': 'Tokio Marine Holdings, Inc.',\n",
+    "    'holcim ag': 'Holcim AG',\n",
+    "    'icici bank ltd': 'ICICI Bank Limited',\n",
+    "    'micron technology inc': 'Micron Technology, Inc.',\n",
+    "    'fiserv inc': 'Fiserv, Inc.',\n",
+    "    'kkr & co inc': 'KKR Real Estate Finance Trust Inc.',\n",
+    "    'arthur j gallagher & co': 'Arthur J. Gallagher & Co.',\n",
+    "    'apollo global management inc': 'Apollo Global Management, Inc.',\n",
+    "    'arista networks inc': 'Arista Networks, Inc.',\n",
+    "    'shin-etsu chemical co ltd': 'Shin-Etsu Polymer Co., Ltd.',\n",
+    "    'sherwin-williams co/the': 'The Sherwin-Williams Company',\n",
+    "    'pnc financial services group inc/the': 'The PNC Financial Services Group, Inc.',\n",
+    "    'udr inc': 'UDR, Inc.',\n",
+    "    'charles schwab corp/the': 'The Charles Schwab Corporation',\n",
+    "    'nintendo co ltd': 'Nintendo Co., Ltd.',\n",
+    "    'sompo holdings inc': 'Sompo Holdings, Inc.',\n",
+    "    'deere & co': 'Deere & Company',\n",
+    "    'marsh & mclennan cos inc': 'Marsh & McLennan Companies, Inc.',\n",
+    "    'cadence design systems inc': 'Cadence Design Systems, Inc.',\n",
+    "    'mizuho financial group inc': 'Mizuho Financial Group, Inc.',\n",
+    "    'elevance health inc': 'Elevance Health, Inc.',\n",
+    "    'mediatek inc': 'MediaTek, Inc.',\n",
+    "    'intercontinental exchange inc': 'Intercontinental Exchange, Inc.',\n",
+    "    'bharti airtel ltd': 'Bharti Hexacom Ltd.',\n",
+    "    'anz group holdings ltd': 'ANZ Group Holdings Limited',\n",
+    "    'chubb ltd': 'Chubb Limited',\n",
+    "    'bank of new york mellon corp/the': 'The Bank of New York Mellon Corporation',\n",
+    "    'nike inc': 'NIKE, Inc.',\n",
+    "    'marvell technology inc': 'Marvell Technology, Inc.',\n",
+    "    'fast retailing co ltd': 'Fast Retailing Co., Ltd.',\n",
+    "    'mondelez international inc': 'Mondelez International, Inc.',\n",
+    "    'chipotle mexican grill inc': 'Chipotle Mexican Grill, Inc.',\n",
+    "    'crowdstrike holdings inc': 'CrowdStrike Holdings, Inc.',\n",
+    "    'ge vernova inc': 'GE Vernova, Inc.',\n",
+    "    'paypal holdings inc': 'PayPal Holdings, Inc.',\n",
+    "    'motorola solutions inc': 'Motorola Solutions, Inc.',\n",
+    "    'united parcel service inc': 'United Parcel Service, Inc.',\n",
+    "    'equinix inc': 'Equinix, Inc.',\n",
+    "    'hon hai precision industry co ltd': 'Hon Hai Precision Industry Co., Ltd.',\n",
+    "    'mitsui & co ltd': 'Mitsui & Co., Ltd.',\n",
+    "    'charter communications inc': 'Charter Communications, Inc.',\n",
+    "    'infosys ltd': 'Infosys Limited',\n",
+    "    'muenchener rueckversicherungs-gesellschaft ag in muenchen': 'Muenchener Rueckversicherungs-Gesellschaft AG',\n",
+    "    'anheuser-busch inbev sa/nv': 'Anheuser-Busch InBev SA/NV',\n",
+    "    'waste management inc': 'Waste Management, Inc.',\n",
+    "    'toronto-dominion bank/the': 'The Toronto-Dominion Bank',\n",
+    "    \"moody's corp\": 'Moodys Corporation',\n",
+    "    'palo alto networks inc': 'Palo Alto Networks, Inc.',\n",
+    "}\n",
+    "\n",
+    "print(f\"Testing {len(name_mapping)} companies...\")\n",
+    "print(\"This will take ~5 minutes due to rate limiting\\n\")\n",
+    "\n",
+    "successful = []\n",
+    "failed = []\n",
+    "\n",
+    "for idx, (our_name, nbim_name) in enumerate(name_mapping.items(), 1):\n",
+    "    if idx % 20 == 0:\n",
+    "        print(f\"  Progress: {idx}/{len(name_mapping)}\")\n",
+    "    \n",
+    "    try:\n",
+    "        response = requests.get(\n",
+    "            f\"{BASE_URL}/v1/query/company/{nbim_name}\",\n",
+    "            headers=headers,\n",
+    "            timeout=10\n",
+    "        )\n",
+    "        \n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            if 'companies' in data and len(data['companies']) > 0:\n",
+    "                successful.append(our_name)\n",
+    "            else:\n",
+    "                failed.append(our_name)\n",
+    "        else:\n",
+    "            failed.append(our_name)\n",
+    "        \n",
+    "        time.sleep(0.3)\n",
+    "    except:\n",
+    "        failed.append(our_name)\n",
+    "\n",
+    "# Load df_p80 to calculate market value\n",
+    "df_p80 = pd.read_csv(DATA_PATH + 'p80_companies_sorted_with_status.csv')\n",
+    "successful_df = df_p80[df_p80['Name'].isin(successful)]\n",
+    "total_value = successful_df['Market_Value_USD'].sum()\n",
+    "\n",
+    "# Check for key big tech\n",
+    "big_tech = ['amazon.com inc', 'meta platforms inc', 'tesla inc']\n",
+    "big_tech_recovered = [name for name in big_tech if name in successful]\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"FINAL RESULTS:\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"✅ Successful: {len(successful)}/{len(name_mapping)} ({len(successful)/len(name_mapping)*100:.1f}%)\")\n",
+    "print(f\"❌ Failed: {len(failed)}/{len(name_mapping)}\")\n",
+    "print(f\"\\n💰 Total market value covered: ${total_value/1e9:.1f}B\")\n",
+    "print(f\"\\n🎯 Big Tech recovered:\")\n",
+    "for name in big_tech:\n",
+    "    status = \"✅\" if name in big_tech_recovered else \"❌\"\n",
+    "    print(f\"  {status} {name}\")\n",
+    "\n",
+    "if failed:\n",
+    "    print(f\"\\n❌ Failed companies ({len(failed)}):\")\n",
+    "    for name in failed[:10]:\n",
+    "        print(f\"  - {name}\")\n",
+    "    if len(failed) > 10:\n",
+    "        print(f\"  ... and {len(failed)-10} more\")\n",
+    "\n",
+    "# Save successful mapping\n",
+    "successful_mapping = {k: v for k, v in name_mapping.items() if k in successful}\n",
+    "with open('manual_name_mapping.json', 'w') as f:\n",
+    "    json.dump(successful_mapping, f, indent=2)\n",
+    "\n",
+    "print(f\"\\n✓ Saved {len(successful_mapping)} confirmed mappings to 'manual_name_mapping.json'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0c3345a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Setup complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import time\n",
+    "import json\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Load API credentials\n",
+    "load_dotenv()\n",
+    "API_KEY = os.getenv('NBIM_API_KEY')\n",
+    "BASE_URL = os.getenv('NBIM_BASE_URL')\n",
+    "headers = {'x-api-key': API_KEY}\n",
+    "\n",
+    "# Define paths\n",
+    "DATA_PATH = \"../datasets/\"\n",
+    "\n",
+    "print(\"✓ Setup complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "83464e08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "FINAL RESULTS:\n",
+      "======================================================================\n",
+      "✅ Successful: 96/100 (96.0%)\n",
+      "❌ Failed: 4/100\n",
+      "\n",
+      "💰 Total market value covered: $263.1B\n",
+      "\n",
+      "🎯 Big Tech recovered:\n",
+      "  ✅ amazon.com inc\n",
+      "  ✅ meta platforms inc\n",
+      "  ✅ tesla inc\n",
+      "\n",
+      "❌ Failed companies (4):\n",
+      "  - novo nordisk a/s\n",
+      "  - dsv a/s\n",
+      "  - holcim ag\n",
+      "  - anheuser-busch inbev sa/nv\n",
+      "\n",
+      "✓ Saved 96 confirmed mappings to 'manual_name_mapping.json'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load df_p80 to calculate market value\n",
+    "df_p80 = pd.read_csv(DATA_PATH + 'p80_companies_sorted_with_status.csv')\n",
+    "successful_df = df_p80[df_p80['Name'].isin(successful)]\n",
+    "total_value = successful_df['Market_Value_USD'].sum()\n",
+    "\n",
+    "# Check for key big tech\n",
+    "big_tech = ['amazon.com inc', 'meta platforms inc', 'tesla inc']\n",
+    "big_tech_recovered = [name for name in big_tech if name in successful]\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"FINAL RESULTS:\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"✅ Successful: {len(successful)}/{len(name_mapping)} ({len(successful)/len(name_mapping)*100:.1f}%)\")\n",
+    "print(f\"❌ Failed: {len(failed)}/{len(name_mapping)}\")\n",
+    "print(f\"\\n💰 Total market value covered: ${total_value/1e9:.1f}B\")\n",
+    "print(f\"\\n🎯 Big Tech recovered:\")\n",
+    "for name in big_tech:\n",
+    "    status = \"✅\" if name in big_tech_recovered else \"❌\"\n",
+    "    print(f\"  {status} {name}\")\n",
+    "\n",
+    "if failed:\n",
+    "    print(f\"\\n❌ Failed companies ({len(failed)}):\")\n",
+    "    for name in failed[:10]:\n",
+    "        print(f\"  - {name}\")\n",
+    "    if len(failed) > 10:\n",
+    "        print(f\"  ... and {len(failed)-10} more\")\n",
+    "\n",
+    "# Save successful mapping\n",
+    "successful_mapping = {k: v for k, v in name_mapping.items() if k in successful}\n",
+    "with open('manual_name_mapping.json', 'w') as f:\n",
+    "    json.dump(successful_mapping, f, indent=2)\n",
+    "\n",
+    "print(f\"\\n✓ Saved {len(successful_mapping)} confirmed mappings to 'manual_name_mapping.json'\")"
    ]
   },
   {
@@ -5808,6 +6147,14 @@
     "print(\"=\"*60)\n",
     "print(f\"Companies marked as processed: {df_p80['already_processed'].sum()}\")\n",
     "print(f\"Companies remaining: {(~df_p80['already_processed']).sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0f2108a",
+   "metadata": {},
+   "source": [
+    "añade corporate sustainability junto con  shareholders proposals on sustainability"
    ]
   }
  ],
